--- a/udemy practice/Readme
+++ b/udemy practice/Readme
@@ -1,1 +1,33 @@
+# Udemy Practice 📝
+
+This folder contains **practice questions and exercises provided by Udemy courses**.  
+All files here are created as part of hands-on practice while learning HTML.
+
+## 📌 What this folder includes
+- Practice questions from Udemy lessons
+- HTML exercises based on course topics
+- Step-by-step practice files for better understanding
+- Beginner-friendly examples
+
+## 🎯 Purpose
+- To practice concepts taught in Udemy lectures
+- To reinforce HTML fundamentals through exercises
+- To track progress while completing the course
+
+## 🛠 Technologies Used
+- HTML5
+- CSS3
+
+## 📂 Folder Structure
+- Each file corresponds to a specific Udemy practice question or lesson
+- File names reflect the topic or exercise
+
+## 📖 Notes
+- These files are created **only for learning and practice**
+- Solutions may vary and are based on my understanding of the concepts
+- This folder will be updated as I continue the course
+
+---
+
+📚 *Learning in progress — practice makes perfect!*
 
